--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -1,4 +1,11 @@
 //add everything here
+java {
+    sourceCompatibility = '17'
+}
+
+dependencies {
+    implementation project(':utils')
+}
 
 test {
     useJUnitPlatform()
