--- a/utils/build.gradle
+++ b/utils/build.gradle
@@ -1,33 +1,39 @@
 plugins {
     // id for library
+    id 'java-library'
     // id for maven to publish jar to local repository
+    id 'maven-publish'
 }
 
 java {
-// provide sourceCompatibility
+    sourceCompatibility = '17'
 }
 
 repositories {
-// provide repository, where required dependencies are located
+    mavenCentral()
 }
 
 publishing {
     publications {
         maven(MavenPublication) {
-// provide groupId
-// provide artifactId
-// provide version
+            groupId = 'org.gradle.sample'
+            artifactId = 'utils'
+            version = '1.3.5'
 
             from components.java
         }
     }
 }
 
-//add Apache Apache Commons Lang 3.10 (or higher) dependency
+dependencies {
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
+}
 
+//provide manifest with such attributes as 'Implementation-Title', 'Implementation-Version'
 jar {
     manifest {
-        //provide manifest with such attributes as 'Implementation-Title', 'Implementation-Version'
+        attributes 'Implementation-Title': 'Gradle Quickstart',
+                'Implementation-Version': 'version'
     }
 }
 
