Add juint dependencies and wrapper

--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -5,6 +5,9 @@ java {
 
 dependencies {
     implementation project(':utils')
+    // https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
 }
 
 test {
